Update template to work with LittleKt 0.10.0 WebGPU update (#6)
* update template to work with new WebGPU LittleKt 0.10.0 update

* remove SNAPSHOT version of LittleKt

* gradle: update to 8.5